<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/title_last_match" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_system_update_alt_black_24dp"
        android:title="@string/title_next_match" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_added_to_favorites"
        android:title="@string/title_favorite_match" />

</menu>
